@@ -1,3 +1,9 @@
+2007-04-24  Kevin B. Kenny  <kennykb@acm.org>
+
+	* generic/tclBinary.c: Addressed several code paths where the
+	error return from the 'binary format' command leaked the result
+	buffer.
+	
 2007-04-24  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	*** 8.5a6 TAGGED FOR RELEASE ***
